@@ -28,6 +28,9 @@
     doc/Makefile.am, doc/README.pld, src/global/log-error.c, configure.ac:
     New Programmable Logic Devices (PLD) subsystem by Michael Walle.
 
+  * extra/fjmem/fjmem_config_pack_spartan6-p.vhd, extra/fjmem/fjmem_spartan6.vhd:
+    Add fjmem example for Spartan-6 devices.
+
 2010-08-30  Mike Frysinger  <vapier@gentoo.org>
 
   * configure.ac: Clean up libusb detection to prefer 1.0 over 0.1, and accept
